[tool.poetry]
name = "devproj"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "~3.6"
Django = "^3.1"
requests = "^2.27.1"
PyYAML = "^6.0"
Flask = "^2.0.3"
ipython = "^8.2.0"
jedi = "^0.18.1"

[tool.poetry.dev-dependencies]
pytest = "^7.1.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

